--- a/_config.yml
+++ b/_config.yml
@@ -466,6 +466,11 @@ gitalk:
 # Google Analytics
 google_analytics: UA-149157544-1
 
+# Google Tag Manager
+google:
+  tag_manager:
+    container_id: GTM-P2C5SZC
+
 # Yandex Webmaster tools verification setting
 # See: https://webmaster.yandex.ru/
 #yandex_site_verification:
